# rust-url-shortener

./: .gitignore  Cargo.toml  Makefile.toml  README.md  data.sqlite  tailwind.config.js
src/: api.rs  layout.rs  main.rs  root.rs
src/components/: meta.rs
src/routes/: root.rs
style/: output.css
