[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
leptos = "0.4.2"
leptos_axum = "0.4.2"
leptos_meta = "0.4.2"
tokio = "1.29.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
