[package]
name = "rust_url_shortener"
version = "0.1.0"
edition = "2021"
authors = ["Szymon Paluch"]

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
leptos = "0.4.2"
leptos_axum = "0.4.2"
leptos_meta = "0.4.2"
load_file = "1.0.1"
rand = "0.8.5"
rusqlite = "0.29.0"
serde = "1.0.171"
tokio = "1.29.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "leptos_axum"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

